reparation bug photo

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div class="underline"></div>
       </div>
       <div class="qui">
-        <img id="singe" src="/images/tea.png" alt="petit singe" />
+        <img id="singe" src="images/tea.png" alt="petit singe" />
         <table id="tableau1">
           <tr>
             <td>
@@ -112,7 +112,7 @@
         </div>
         <div class="boxtotal">
           <div class="box1">
-            <img src="/images/stone-town.png" alt="la ville de pierre" />
+            <img src="images/stone-town.png" alt="la ville de pierre" />
             <div class="text">
               <h2>STONE TOWN</h2>
               <p>
@@ -125,7 +125,7 @@
             </div>
           </div>
           <div class="box1">
-            <img src="/images/prison-island.png" alt="ile prison" />
+            <img src="images/prison-island.png" alt="ile prison" />
             <div class="text">
               <h2>PRISON ISLAND</h2>
               <p>
@@ -139,7 +139,7 @@
           </div>
           <div class="box1">
             <img
-              src="/images/parc-national-jozani.png"
+              src="images/parc-national-jozani.png"
               alt="parc-national-jozani"
             />
             <div class="text">
@@ -226,7 +226,7 @@
               alors que c'est déjà top.
             </p>
             <h3>
-              <img src="/images/clients/emilie.jpg" alt="emilie" />Emilie du
+              <img src="images/clients/emilie.jpg" alt="emilie" />Emilie du
               Châtelet
             </h3>
           </div>
@@ -239,7 +239,7 @@
               enfants d'une école de masaïs sédentarisé.
             </p>
             <h3>
-              <img src="/images/clients/blaise.jpg" alt="blaise" />Blaise Pascal
+              <img src="images/clients/blaise.jpg" alt="blaise" />Blaise Pascal
             </h3>
           </div>
 
@@ -250,7 +250,7 @@
               cultivé, qui s’est adapté à notre rythme et à nos envies.
             </p>
             <h3>
-              <img src="/images/clients/julia.jpg" alt="julia" />Julia Robinson
+              <img src="images/clients/julia.jpg" alt="julia" />Julia Robinson
             </h3>
           </div>
         </div>
